<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaksi"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/txtBrg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_barang"
        android:textSize="20sp"
        android:layout_below="@id/title"
        android:layout_marginTop="15dp"/>
    <EditText
        android:id="@+id/editBrg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtBrg"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/txtSatuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/satuan"
        android:textSize="20sp"
        android:layout_below="@id/editBrg"/>
    <Spinner
        android:id="@+id/spinSatuan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtSatuan"
        android:entries="@array/satuan"/>
    <TextView
        android:id="@+id/txtJumlah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jumlah"
        android:textSize="20sp"
        android:layout_below="@id/spinSatuan"/>
    <EditText
        android:id="@+id/editJumlah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtJumlah"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/txtHarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/harga"
        android:textSize="20sp"
        android:layout_below="@id/editJumlah"/>
    <EditText
        android:id="@+id/editHarga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtHarga"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/txtBayar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pembayaran"
        android:textSize="20sp"
        android:layout_below="@id/editHarga"/>
    <RadioGroup
        android:id="@+id/rgBayar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtBayar">
        <RadioButton
            android:id="@+id/rbATM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atm"/>
        <RadioButton
            android:id="@+id/rbCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash"/>
        <RadioButton
            android:id="@+id/rbCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit"/>
    </RadioGroup>
    <Button
        android:id="@+id/btnProses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proses"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/rgBayar"
        android:layout_marginTop="10dp"/>

</RelativeLayout>
</ScrollView>